# safe-c

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  safe-memory.c
include/elegan-c/: common.h  memory.h  safe_string.h  string.h
include/safe-c/: safe_memory.h  safe_string.h
src/: common.c  memory.c  safe_memory.c  safe_string.c  string.c
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  el_default_handlers.c  el_null_handlers.c
tests/memory/: CMakeLists.txt  el_calloc.c  el_custom_calloc.c  el_custom_malloc.c  el_custom_realloc.c  el_free.c  el_malloc.c  el_realloc.c  el_unsafe_calloc.c  el_unsafe_malloc.c  el_unsafe_realloc.c  safe_calloc.c  safe_free.c  safe_malloc.c  safe_realloc.c
tests/safe_memory/: CMakeLists.txt  safe_calloc.c  safe_free.c  safe_malloc.c  safe_realloc.c
